--- a/src/components/CardList/card-list.styles.css
+++ b/src/components/CardList/card-list.styles.css
@@ -2,7 +2,7 @@
     width: 85vw;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
-    padding-top: 4rem;
+    padding: 4rem 0;
 }
