--- a/src/components/SearchBar/search-bar.styles.css
+++ b/src/components/SearchBar/search-bar.styles.css
@@ -6,7 +6,7 @@
 
 .searchTerm {
     width: 100%;
-    border: 3px solid #00B4CC;
+    border: 3px solid #808080;
     border-right: none;
     padding: 5px;
     height: 20px;
@@ -17,8 +17,8 @@
 .searchButton {
     width: 40px;
     height: 36px;
-    border: 1px solid #00B4CC;
-    background: #00B4CC;
+    border: 1px solid #808080;
+    background: #808080;
     text-align: center;
     color: #fff;
     border-radius: 0 5px 5px 0;
